[package]
name = "midi_sender"
version = "0.1.0"
authors = ["Sam Gillespie <samgwise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
futures = "0.3"
midir = "0.5"
rosc = "~0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"